Make the project maven-based + add draft VariableDownloader implementation